# minecraft-server-proxy

./: CMakeLists.txt
src/: Client.cpp  Client.h  FakeLoginPacket.cpp  FakeLoginPacket.h  FakeMinecraftServer.cpp  FakeMinecraftServer.h  Packet.cpp  Packet.h  PacketRegistry.cpp  PacketRegistry.h  PingPacket.cpp  PingPacket.h  ProxyTest.cpp  ProxyTest.h  StatusRequestPacket.cpp  StatusRequestPacket.h  main.cpp
